# LLMOps

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  run_evaluations.py  test.py
.github/workflows/: ci.yml  task_defination.json
data/: AgenticAI.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/exceptions/: custom_exception.py
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: RAG.ipynb  experiments.ipynb
tests/: conftest.py
tests/integration/: test_chat_route.py  test_upload_route.py
tests/unit/: test_data_ingestion.py  test_retrieval.py
